# Kepler

./: .gitignore  .gitmodules  Build.cmake  CMakeLists.txt  GenerateEditor.bat  GenerateProjectFiles.bat  GenerateRuntime.bat  README.md  imgui.ini  premake5.lua
Dependencies/physx/: CMakeLists.txt  README.md
Kepler/: CMakeLists.txt  premake5.lua
Kepler/Apps/: CMakeLists.txt
Kepler/Apps/KECacheChecker/: CMakeLists.txt
Kepler/Apps/KECacheChecker/Source/: Main.cs
Kepler/Apps/KEReflector/: CMakeLists.txt
Kepler/Apps/KEReflector/Source/: Class.cs  Header.cs  Main.cs  Project.cs  ReflectedField.cs  SourceDatabase.cs
Kepler/Assets/DefaultGeometry/: Sphere.fbx
Kepler/Assets/Editor/Materials/: Grid.kmat
Kepler/Assets/Materials/: Mat_DefaultLines.kmat  Mat_DefaultLit.kmat  Mat_DefaultUnlit.kmat  Mat_Ground.kmat
Kepler/CMake/: Build.cmake  Reflection.cmake
Kepler/Modules/Core/: CMakeLists.txt
Kepler/Shaders/: CMakeLists.txt  DefaultLines.hlsl  DefaultLit.hlsl  DefaultPrePass.hlsl  DefaultScreenQuad.hlsl  DefaultUnlit.hlsl
Kepler/Shaders/Core/: Core.hlsl  DefaultUnlit.hlsl  ScreenQuad.hlsl  ShaderCore.hlsl  Unlit.hlsl
Kepler/Shaders/Editor/: EditorGrid.hlsl
Kepler/Shaders/Source/Core/: DefaultUnlit.hlsl
Kepler/Source/: Kepler.h
Kepler/Source/Async/: Async.cpp  Async.h  ThreadPool.cpp  ThreadPool.h
Kepler/Source/Audio/: AudioCommon.cpp  AudioCommon.h  AudioEngine.cpp  AudioEngine.h  Sound.cpp  Sound.h
Kepler/Source/Audio/AudioMA/: AudioEngineMA.cpp  AudioEngineMA.h  MACommon.h  SoundMA.cpp  SoundMA.h
Kepler/Source/Core/: App.cpp  App.h  Core.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Macros.h  Malloc.cpp  Malloc.h  Malloc.inl  MemoryPool.cpp  MemoryPool.h  Pch.h  Timer.cpp  Timer.h  Types.cpp  Types.h
Kepler/Source/Core/Containers/: ChaosMap.h  DynArray.h  RingQueue.h  RingQueue.inl
Kepler/Source/Core/Delegate/: Delegate.cpp  Delegate.h
Kepler/Source/Core/Filesystem/: FileUtils.cpp  FileUtils.h  VFS.cpp  VFS.h
Kepler/Source/Core/Json/: Serialization.cpp  Serialization.h
Kepler/Source/Core/Modules/: Module.h  ModuleStack.cpp  ModuleStack.h
Kepler/Source/Core/Object/: Object.h  ObjectBase.h
Kepler/Source/Editor/: EditorModule.cpp  EditorModule.h
Kepler/Source/Editor/Misc/: EditorLogReceiver.cpp  EditorLogReceiver.h  EditorLogSink.cpp  EditorLogSink.h
Kepler/Source/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  LogPanel.cpp  LogPanel.h  MaterialEditor.cpp  MaterialEditor.h
Kepler/Source/Editor/Widgets/: Elements.cpp  Elements.h
Kepler/Source/Launch/: Launch.cpp  Launch.h
Kepler/Source/Math/: MathCommon.h  Vector.h
Kepler/Source/Physics/: PhysicsWorld.cpp  PhysicsWorld.h  PhysxEngine.cpp  PhysxEngine.h
Kepler/Source/Physics/Rigidbody/: Rigidbody.cpp  Rigidbody.h
Kepler/Source/Physics/Shapes/: Box.cpp  Box.h
Kepler/Source/Platform/: Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Platform.cpp  Platform.h  PlatformEvent.cpp  PlatformEvent.h  Window.cpp  Window.h
Kepler/Source/Platform/PlatformGLFW/: PlatformGLFW.cpp  PlatformGLFW.h  WindowGLFW.cpp  WindowGLFW.h
Kepler/Source/Reflection/: Class.cpp  Class.h  ReflectionDatabase.cpp  ReflectionDatabase.h
Kepler/Source/Renderer/: BufferRegistry.h  HLSLShaderCompiler.cpp  HLSLShaderCompiler.h  LowLevelRenderer.cpp  LowLevelRenderer.h  RenderDevice.cpp  RenderDevice.h  RenderGlobals.cpp  RenderGlobals.h  RenderThread.cpp  RenderThread.h  RenderTypes.cpp  RenderTypes.h  ShaderCompiler.cpp  ShaderCompiler.h  TargetRegistry.cpp  TargetRegistry.h
Kepler/Source/Renderer/Elements/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  HLSLShader.cpp  HLSLShader.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  ParamBuffer.cpp  ParamBuffer.h  RWBuffer.h  RenderPrimitive.cpp  RenderPrimitive.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderReflection.h  StructuredBuffer.cpp  StructuredBuffer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexFactroy.h  VertexLayout.cpp  VertexLayout.h
Kepler/Source/Renderer/Pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.h  ParamPack.cpp  ParamPack.h
Kepler/Source/Renderer/RendererD3D11/: CommandListImmediateD3D11.cpp  CommandListImmediateD3D11.h  D3D11Common.cpp  D3D11Common.h  GraphicsPipelineHandleD3D11.cpp  GraphicsPipelineHandleD3D11.h  HLSLIncludeResolver.cpp  HLSLIncludeResolver.h  HLSLShaderD3D11.cpp  HLSLShaderD3D11.h  Image1D_D3D11.cpp  Image1D_D3D11.h  Image2D_D3D11.cpp  Image2D_D3D11.h  Image3D_D3D11.cpp  Image3D_D3D11.h  ImageD3D11.cpp  ImageD3D11.h  IndexBufferD3D11.cpp  IndexBufferD3D11.h  ParamBufferD3D11.cpp  ParamBufferD3D11.h  RenderDeviceD3D11.cpp  RenderDeviceD3D11.h  RenderTargetD3D11.cpp  RenderTargetD3D11.h  ShaderCompilerD3D11.cpp  ShaderCompilerD3D11.h  ShaderD3D11.cpp  ShaderD3D11.h  StructuredBufferD3D11.h  SwapChainD3D11.cpp  SwapChainD3D11.h  TextureD3D11.cpp  TextureD3D11.h  TransferBufferD3D11.cpp  TransferBufferD3D11.h  VertexBufferD3D11.cpp  VertexBufferD3D11.h
Kepler/Source/Renderer/Subrenderer/: Subrenderer.h  Subrenderer2D.cpp  Subrenderer2D.h
Kepler/Source/Renderer/World/: Camera.cpp  Camera.h  Material.cpp  Material.h  (+6 more)
Kepler/Source/Tools/: ImageLoader.cpp  ImageLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h
Kepler/Source/World/: World.cpp  World.h  WorldRegistry.cpp  WorldRegistry.h
(+78 files in other folders)
